--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "doctrine/doctrine-bundle": "1.1.*",
         "twig/extensions": "dev-master",
         "sensio/distribution-bundle": "2.1.*",
-        "doctrine/doctrine-fixtures-bundle": "v2.2.0",
+        "doctrine/doctrine-fixtures-bundle": "~2.2.0",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "stof/doctrine-extensions-bundle": "~1.1",
         "knplabs/knp-markdown-bundle": "1.2.*",
