Added truncate on username

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -20,6 +20,12 @@ twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
 
+services:
+    twig.extension.text:
+       class: Twig_Extensions_Extension_Text
+       tags:
+            - { name: twig.extension }
+
 # Markdown Configuration
 knp_markdown: #~
     parser:       # Enable the parser service
