--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
     - sudo chmod -R 777 app/cache app/logs
 
 script:
-    - phpunit -c app/
+    - ./bin/phpunit -c app/
     - ./bin/behat --format=progress @KnpBundlesBundle
 
 notifications:
