--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.13",
+        "symfony/symfony": "2.1.*",
         "symfony/assetic-bundle": "2.1.*",
         "symfony/monolog-bundle": "2.1.*",
         "symfony/swiftmailer-bundle": "2.1.*",
