--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.*",
+        "symfony/symfony": "2.2.11",
         "symfony/assetic-bundle": "2.1.*",
-        "symfony/monolog-bundle": "2.1.*",
+        "symfony/monolog-bundle": "2.2.*",
         "symfony/swiftmailer-bundle": "2.1.*",
         "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "~1.1.0",
+        "doctrine/doctrine-bundle": "~1.2.0",
         "twig/extensions": "~1.0",
-        "sensio/distribution-bundle": "2.1.*",
+        "sensio/distribution-bundle": "2.2.*",
         "doctrine/doctrine-fixtures-bundle": "~2.2.0",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "doctrine/migrations": "dev-master",
